Fix overflowing movielist component

--- a/src/assets/sass/_home.scss
+++ b/src/assets/sass/_home.scss
@@ -95,7 +95,7 @@
 .movie-cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 0.5% 0.5%;
+    gap: 4rem 4rem;
     padding: 5%;
     
 
